--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "flow": "flow",
     "test": "yarn test-only",
     "test-only": "jest --coverage --colors",
-    "test:watch": "jest --colors --watch",
-    "precommit": "lint-staged"
+    "test:watch": "jest --colors --watch"
   },
   "engineStrict": true,
   "engines": {
